--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=afdae7a6fc0252e3529929ac20bb564c
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN=null://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
