--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ MAILER_DSN=null://localhost
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/BourguiBook?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+GOOGLE_RECAPTCHA_SITE_KEY=6LdkwusUAAAAAAaz5fTkdBipobr3rbfdSt5CFRE0
+GOOGLE_RECAPTCHA_PRIVATE_KEY=6LdkwusUAAAAAJgIrAm5OzhXqUrxBV8JeyxXkdBt
