--- a/.env
+++ b/.env
@@ -32,5 +32,6 @@ MAILER_DSN=null://localhost
 DATABASE_URL=mysql://root:@127.0.0.1:3306/BourguiBook?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
+# Clés Google Recaptcha
 GOOGLE_RECAPTCHA_SITE_KEY=6LdkwusUAAAAAAaz5fTkdBipobr3rbfdSt5CFRE0
 GOOGLE_RECAPTCHA_PRIVATE_KEY=6LdkwusUAAAAAJgIrAm5OzhXqUrxBV8JeyxXkdBt
