--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "easycorp/easyadmin-bundle": "^3.0",
+        "exercise/htmlpurifier-bundle": "^3.0",
+        "friendsofsymfony/ckeditor-bundle": "^2.2",
         "fzaninotto/faker": "^1.9",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
