--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "easycorp/easyadmin-bundle": "^3.0",
+        "antishov/doctrine-extensions-bundle": "^1.4",
+        "easycorp/easyadmin-bundle": "2.*",
         "exercise/htmlpurifier-bundle": "^3.0",
         "friendsofsymfony/ckeditor-bundle": "^2.2",
         "fzaninotto/faker": "^1.9",
+        "knplabs/knp-paginator-bundle": "^5.2",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
@@ -84,5 +86,7 @@
             "allow-contrib": false,
             "require": "4.4.*"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
